crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__multiple_contracts_and_constructor@2.13.1.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---
[PASS] simple_package_with_cheats_integrationtest::contract::call_and_invoke_proxy (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~869210)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_block_number       | 15780 | 15780 | 15780 | 0       | 2       |
╰------------------------+-------+-------+-------+---------+---------╯

╭-----------------------------+--------+--------+--------+---------+---------╮
| HelloStarknetProxy Contract |        |        |        |         |         |
+============================================================================+
| Function Name               | Min    | Max    | Avg    | Std Dev | # Calls |
|-----------------------------+--------+--------+--------+---------+---------|
| constructor                 | 14650  | 14650  | 14650  | 0       | 1       |
|-----------------------------+--------+--------+--------+---------+---------|
| get_block_number            | 125280 | 125280 | 125280 | 0       | 2       |
╰-----------------------------+--------+--------+--------+---------+---------╯
