crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_basic@2.14.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~975430)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_balance            | 21410 | 21410 | 21410 | 0       | 2       |
|------------------------+-------+-------+-------+---------+---------|
| increase_balance       | 67980 | 67980 | 67980 | 0       | 1       |
╰------------------------+-------+-------+-------+---------+---------╯
