crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_basic@2.16.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---


[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~513510)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_balance            | 13340 | 13340 | 13340 | 0       | 2       |
|------------------------+-------+-------+-------+---------+---------|
| increase_balance       | 24940 | 24940 | 24940 | 0       | 1       |
╰------------------------+-------+-------+-------+---------+---------╯
